# THI_Cursach

./: CMakeLists.txt  forecastchartwindow.cpp  forecastchartwindow.h  location.cpp  location.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  weatherapi.cpp  weatherapi.h
tests/: CMakeLists.txt  test_forecastchart.cpp  test_mainwindow.cpp  test_weatherapi.cpp
